# sei_embedder

./: README.md  meson.build  test_integration_h264_evc.sh  test_integration_h265_evc.sh  test_integration_h266_vvc_evc.sh
src/: gstlvcompositor.c  gstlvcompositor.h  sei_merge.c  sei_merge.h
